OldArchive/cc9494160c9cbc38651482a267e9505b-76b69eb4e48bf39ce4212f2d8ff4a507/output
main.cpp:10:27: error: no matching function for call to 'select'
    using type = decltype(select<Int<T>(), Int<Ts>()...>());
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:18:23: note: in instantiation of template class 'back<int, bool, float>' requested here
static_assert(is_same<back<int, bool, float>::type, float(*)()>::value, "...");
                      ^
main.cpp:8:15: note: candidate template ignored: invalid explicitly-specified argument for 1st template parameter
    static U* select(){}
              ^
1 error generated.
